--- a/TexasHold'Em/TexasHold'Em.csproj
+++ b/TexasHold'Em/TexasHold'Em.csproj
@@ -46,14 +46,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Call.cs" />
+    <Compile Include="f_main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="f_main.Designer.cs">
+      <DependentUpon>f_main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Greetings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Greetings.Designer.cs">
+      <DependentUpon>Greetings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PLogin.Designer.cs">
+      <DependentUpon>PLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PRegister.Designer.cs">
+      <DependentUpon>PRegister.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="f_main.resx">
+      <DependentUpon>f_main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Greetings.resx">
+      <DependentUpon>Greetings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PLogin.resx">
+      <DependentUpon>PLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PRegister.resx">
+      <DependentUpon>PRegister.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
