--- a/TexasHold'Em/TexasHold'Em.csproj
+++ b/TexasHold'Em/TexasHold'Em.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Players.cs" />
     <Compile Include="PLogin.cs">
       <SubType>Form</SubType>
     </Compile>
